freva/11-redis.yaml
---
apiVersion: v1
kind: Service
metadata: { name: cache-server, namespace: freva }
spec:
  type: ClusterIP
  selector: { app: cache-server }
  ports: [{ port: 6379, targetPort: 6379, name: redis }]
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: cache-server, namespace: freva }
spec:
  replicas: 1
  selector: { matchLabels: { app: cache-server } }
  template:
    metadata: { labels: { app: cache-server } }
    spec:
      securityContext: { fsGroup: 0 }
      containers:
        - name: redis
          image: ghcr.io/freva-org/freva-redis:7.4.0
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 6379, name: redis }]
