freva/12-monog.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-server
  namespace: freva
  labels:
    app: freva-mongo-server
    app.kubernetes.io/name: freva
    app.kubernetes.io/instance: mongo-server
    app.kubernetes.io/component: rest-api
    app.kubernetes.io/part-of: freva
    app.kubernetes.io/version: 6.0.16
    app.kubernetes.io/managed-by: ansible
    freva.org/stateful: true
    freva.org/tier: database
spec:
  type: ClusterIP
  selector: { app: mongo-server }
  ports: [{ port: 27017, targetPort: 27017, name: mongo }]
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-server
  namespace: freva
  labels:
    app: freva-mongo-server
    app.kubernetes.io/name: freva
    app.kubernetes.io/instance: mongo-server
    app.kubernetes.io/component: rest-api
    app.kubernetes.io/part-of: freva
    app.kubernetes.io/version: 6.0.16
    app.kubernetes.io/managed-by: ansible
    freva.org/stateful: true
    freva.org/tier: database
spec:
  serviceName: mongo-server
  replicas: 1
  selector: { matchLabels: { app: mongo-server } }
  template:
    metadata:
      name: mongo-server
      namespace: freva
      labels:
        app: freva-mongo-server
        app.kubernetes.io/name: freva
        app.kubernetes.io/instance: mongo-server
        app.kubernetes.io/component: rest-api
        app.kubernetes.io/part-of: freva
        app.kubernetes.io/version: 6.0.16
        app.kubernetes.io/managed-by: ansible
        freva.org/stateful: true
        freva.org/tier: database
    spec:
      securityContext: { fsGroup: 0 }
      containers:
        - name: mongodb
          image: ghcr.io/freva-org/freva-mongo:6.0.16
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 27017, name: mongo }]
          volumeMounts:
            - { name: mongo-data, mountPath: /data/db }
            - { name: mongo-logs, mountPath: /data/logs }
      volumes:
        - name: mongo-data
          persistentVolumeClaim: { claimName: mongo-data }
        - name: mongo-logs
          persistentVolumeClaim: { claimName: mongo-logs }
