freva/20-rest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freva-rest-server
  namespace: freva
  labels:
    app: freva-freva-rest-server
    app.kubernetes.io/name: freva
    app.kubernetes.io/instance: freva-rest-server
    app.kubernetes.io/component: rest-api
    app.kubernetes.io/part-of: freva
    app.kubernetes.io/version: 2510.0.0
    app.kubernetes.io/managed-by: ansible
    freva.org/stateful: true
    freva.org/tier: backend
spec:
  type: ClusterIP
  selector: { app: freva-rest-server }
  ports: [{ port: 7777, targetPort: 7777, name: http }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freva-rest-server
  namespace: freva
  labels:
    app: freva-freva-rest-server
    app.kubernetes.io/name: freva
    app.kubernetes.io/instance: freva-rest-server
    app.kubernetes.io/component: rest-api
    app.kubernetes.io/part-of: freva
    app.kubernetes.io/version: 2510.0.0
    app.kubernetes.io/managed-by: ansible
    freva.org/stateful: true
    freva.org/tier: backend
spec:
  replicas: 1
  selector: { matchLabels: { app: freva-rest-server } }
  template:
    metadata:
      name: freva-rest-server
      namespace: freva
      labels:
        app: freva-freva-rest-server
        app.kubernetes.io/name: freva
        app.kubernetes.io/instance: freva-rest-server
        app.kubernetes.io/component: rest-api
        app.kubernetes.io/part-of: freva
        app.kubernetes.io/version: 2510.0.0
        app.kubernetes.io/managed-by: ansible
        freva.org/stateful: true
        freva.org/tier: backend
    spec:
      securityContext: { fsGroup: 0 }
      containers:
        - name: rest
          image: ghcr.io/freva-org/freva-rest-api:2510.0.0
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 7777, name: http }]
          volumeMounts:
            - { name: freva-rest-logs, mountPath: /tmp/logs }
          readinessProbe:
            httpGet: { path: "/", port: 7777 }
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: freva-rest-logs
          persistentVolumeClaim: { claimName: freva-rest-logs }
