freva/23-proxy.yaml
---
apiVersion: v1
kind: Service
metadata: { name: web-reverse-proxy, namespace: freva }
spec:
  type: ClusterIP
  selector: { app: web-reverse-proxy }
  ports:
    - { name: http, port: 80, targetPort: 80 }
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: web-reverse-proxy, namespace: freva }
spec:
  replicas: 1
  selector: {matchLabels: {app: web-reverse-proxy}}
  template:
    metadata: {labels: {app: web-reverse-proxy}}
    spec:
      securityContext: {fsGroup: 0}
      containers:
        - name: nginx
          image: ghcr.io/freva-org/freva-nginx:1.25.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - {name: web-static, mountPath: /srv/static}
            - {name: proxy-logs, mountPath: /data/logs}
            - {name: core-preview, mountPath: /srv/static/preview, readOnly: true}
      volumes:
        - name: web-static
          persistentVolumeClaim: {claimName: web-config}
        - name: proxy-logs
          emptyDir: {}
        - name: core-preview
          hostPath:
            path: "/home/k/k204230/freva-core/work/share/preview"
            type: Directory
