freva/32-web-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-reverse-proxy
  namespace: freva
  labels:
    app: web-app
    app.kubernetes.io/name: freva
    app.kubernetes.io/instance: web-app
    app.kubernetes.io/component: web-app
    app.kubernetes.io/part-of: freva
    app.kubernetes.io/version: 2510.3.4
    app.kubernetes.io/managed-by: ansible
    freva.org/stateful: "false"
    freva.org/tier: frontend
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - port: 8080
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: freva
  labels:
    app: web-app
    app.kubernetes.io/name: freva
    app.kubernetes.io/instance: web-app
    app.kubernetes.io/component: web-app
    app.kubernetes.io/part-of: freva
    app.kubernetes.io/version: 2510.3.4
    app.kubernetes.io/managed-by: ansible
    freva.org/stateful: "false"
    freva.org/tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
        app.kubernetes.io/name: freva
        app.kubernetes.io/instance: web-app
        app.kubernetes.io/component: web-app
        app.kubernetes.io/part-of: freva
        app.kubernetes.io/version: 2510.3.4
        app.kubernetes.io/managed-by: ansible
        freva.org/stateful: "false"
        freva.org/tier: frontend
    spec:
      securityContext:
        fsGroup: 0
      containers:
        - name: nginx
          image: ghcr.io/freva-org/freva-nginx:1.29.3
          imagePullPolicy: IfNotPresent
          resources: {'limits': {'cpu': '1600m', 'memory': '2Gi'}, 'requests': {'cpu': '600m', 'memory': '1Gi'}}
          volumeMounts:
            - {name: web-static, mountPath: /srv/static}
            - {name: logs, mountPath: /tmp/nginx }
            - {name: core-preview, mountPath: /srv/static/preview, readOnly: true}

        - name: web-app
          image: ghcr.io/freva-org/freva-web:2510.3.4
          imagePullPolicy: IfNotPresent
          resources: {'limits': {'cpu': '1600m', 'memory': '2Gi'}, 'requests': {'cpu': '600m', 'memory': '1Gi'}}
          volumeMounts:
            - name: web-ext
              mountPath: "/gpfs/csfs1/work/gdexdata/"
              readOnly: true
            - name: web-static
              mountPath: /opt/freva_web/static
      volumes:
        - name: web-static
          persistentVolumeClaim:
            claimName: web-data
        - name: logs
          persistentVolumeClaim:
            claimName: proxy-logs
        - name: wait-script
          configMap:
            name: wait-utils
            defaultMode: 0755
        - name: web-ext
          nfs:
            path: /gpfs/csfs1/work/gdexdata/
            readOnly: true
            server: gladedm1.ucar.edu
        - name: core-preview
          nfs:
            path: /gpfs/csfs1/work/gdexdata/freva/share/preview
            readOnly: true
            server: gladedm1.ucar.edu
